mods og clean up i tekst

--- a/oevelse3.html
+++ b/oevelse3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h2>Gæt et tal</h2>
-  <p> Gær et tal mellem 0 og 10 </p>
+  <p> Gæt et tal mellem 0 og 10 </p>
   <input type="number" id="tal">
   <button> Gæt! </button>
 </body>
