--- a/tirsdagoevelser/04-append.html
+++ b/tirsdagoevelser/04-append.html
@@ -37,8 +37,8 @@
  //øvelse 4.1 - opret ny article-element med createElement
  const article = document.createElement("article");
  //tilføj nyt billede, overskrift og tekst til nye article
- article.innerHTML = "<h2>Nyt element </h2> <img src='https://placeimg.com/640/480/tech' alt='tech'> <p>This is a funny looking cat</p>"
-  //tilføj ny article efter de eksisterende article elementer 
+ article.innerHTML = "<h2>Nyt element </h2> <img src='https://placeimg.com/640/480/tech' alt='tech'> <p>Sjovt udseende den her kat har</p>"
+//tilføj ny article efter de eksisterende article elementer 
  document.querySelector("section").appendChild(article);
 
  
