--- a/tirsdagoevelser/06-skiftBillede.html
+++ b/tirsdagoevelser/06-skiftBillede.html
@@ -22,7 +22,7 @@
       </article>
     </section>
   </main>
-  <footer>Tema7 øvelser js and DOM 2SEM E22 </footer></footer>
+  <footer>Tema7 øvelser js and DOM 2SEM E22 </footer>
 </body>
 <script>
   //øvelse 5
