--- a/js-objekter/02-visDyr.html
+++ b/js-objekter/02-visDyr.html
@@ -5,26 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    img {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  </style>
 </head>
 <body>
   <article id ="Dyr">
-    <h3></h3>
-    <img src="" alt="">
-    <p></p>
-    <p></p>
-    
   </article>
 </body>
 
 <script>
-  window.addEventListener("DOMContentLoaded", start);
+  document.addEventListener("DOMContentLoaded", start);
 
 function start (){
   //dyr objekt
-  const dyr = {"navn":"gris", "type":"pattedyr", "billede":"https://mabe-kea.dk/E19/pics/pig.png", "levested":"svinefarm"};
+  let dyr = {"navn":"gris", "type":"pattedyr", "billede":"https://mabe-kea.dk/E19/pics/pig.png", "levested":"svinefarm"};
   
-  //udskriv objekt værdier i DOM form
-  console.log(`navn:${dyr.navn} type:${dyr.type} ${dyr.billede} levelsted:${dyr.levested}`);
+  //udskriv objekt værdier i DOM form  
+  const art = document.querySelector("#Dyr");
+  art.textContent = `navn: ${dyr.navn}  type:  ${dyr.type} levelsted: ${dyr.levested}`;
+
+  art.appendChild(document.createElement('img')).src = `${dyr.billede}`; //lav ny img element i #Dyr article og tilføj til article tag 
+
 }
 </script>
 </html>
