--- a/JSON_fetch/persongalleri.html
+++ b/JSON_fetch/persongalleri.html
@@ -7,6 +7,7 @@
   <title>Persongalleri</title>
   <style>
     img {
+      border-radius: 5% ;
       max-width: 100%;
     }
     main {
@@ -15,8 +16,9 @@
       grid-gap: 10px;
     }
     article {
-      border: 1px solid #100000;
-      margin: 1em;
+      border: 1px solid orange;
+      border-radius: 10% 10% 0% 0%;
+      
     }
   </style>
 </head>
